--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -31,12 +30,13 @@
         android:digits="1234567890"
         android:ems="10"
         android:hint="@string/number_input_hint"
-        android:inputType="numberSigned" />
+        android:inputType="numberSigned"
+        android:importantForAutofill="no"/>
 
     <Button
         android:id="@+id/b_confirm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="@string/confirm" />
+        android:text="@string/confirm_btn" />
 </LinearLayout>
