--- a/app/src/main/res/layout/activity_high_score_screen.xml
+++ b/app/src/main/res/layout/activity_high_score_screen.xml
@@ -23,6 +23,7 @@
         android:textSize="14sp" />
 
     <TextView
+        android:id="@+id/tv_score"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
