--- a/app/src/main/res/layout/activity_high_score_screen.xml
+++ b/app/src/main/res/layout/activity_high_score_screen.xml
@@ -43,7 +43,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="High Score"
+        android:text="@string/high_score"
         android:textSize="20sp"
         android:textColor="@color/black"
         android:textAlignment="center"
